# agentic-cli

./: README.md  main.py  pyproject.toml
